--- a/3-enrich/emr-etl-runner/Gemfile
+++ b/3-enrich/emr-etl-runner/Gemfile
@@ -19,10 +19,11 @@ ruby "1.9.3"
 # ErmEtlRunner is a Ruby app (not a RubyGem)
 # built with Bundler, so we add in the
 # RubyGems it requires here.
-gem "contracts", "~> 0.7"
+gem "contracts", "= 0.7"
 gem "elasticity", "~> 4.0.5"
 gem "sluice", "~> 0.2.2"
 gem "awrence", "~> 0.1.0"
+gem "snowplow-tracker", "~> 0.4.2"
 
 group :development do
   gem "rspec", "~> 2.14", ">= 2.14.1"
